# bili-api-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: credential.rs  error.rs  lib.rs  utils.rs
src/apis/: mod.rs
src/apis/live/: info.rs  mod.rs  msg.rs  user.rs
src/apis/login/: login_info.rs  mod.rs
src/apis/misc/sign/: wbi.rs
src/apis/user/: info.rs
src/client/: config.rs  mod.rs  rate_limiting.rs
src/ureq/: mod.rs
